--- a/AnnaGUI.Wpf/AnnaGUI.Wpf.csproj
+++ b/AnnaGUI.Wpf/AnnaGUI.Wpf.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <OutputType>Exe</OutputType>
+        <OutputType>WinExe</OutputType>
         <Nullable>disable</Nullable>
         <ApplicationIcon>icon.ico</ApplicationIcon>
         <RollForward>LatestMajor</RollForward>
